[package]
name = "captain-hook"
description = "Cross-platform, modern and native git hooks."
version = "0.2.0"
edition = "2018"
authors = ["Federico Dionisi <code@fdionisi.me>"]
readme = "README.md"
repository = "https://github.com/fdionisi/captain-hook/"
license = "MIT"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"